--- a/css/styles.css
+++ b/css/styles.css
@@ -82,9 +82,11 @@ body {
   letter-spacing: 0.02em;
 }
 /* ======= HEADER======*/
+
 .header {
   border-bottom: 1px solid #e7e9fc;
   padding: 24px 0;
+
 }
 
 .header .container {
@@ -123,6 +125,21 @@ body {
 }
 
 .header-list-item {
+}
+
+.studio-active{
+  margin: 0;
+
+
+}
+.studio-active::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  margin-top: 20px;
+  background: #404bbf;
 }
 
 .header-list-link {
@@ -169,11 +186,21 @@ body {
 /* =====HEAD=SECTION===== */
 
 .head {
-  background: #2e2f42;
+  background-color: #2e2f42;;
   padding: 188px 0;
-}
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ), 
+    url(/images/imgback1.jpg);
+  background-size: 1440px 600px;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  }
 
 .head .container {
+
 }
 
 .head-title {
@@ -267,6 +294,7 @@ body {
 .team-list-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -311,6 +339,10 @@ body {
 }
 
 .portfolio-list-item {
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-img {
