--- a/css/styles.css
+++ b/css/styles.css
@@ -85,9 +85,8 @@ body {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-
-
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -98,7 +97,6 @@ body {
 .header-nav {
   display: flex;
   align-items: center;
-
 }
 
 .header-logo {
@@ -111,7 +109,6 @@ body {
   color: #4d5ae5;
   margin-right: 76px;
   padding: 24px 0;
-
 }
 
 .header-logo-black {
@@ -127,7 +124,6 @@ body {
   display: flex;
   gap: 40px;
   align-items: center;
-
 }
 
 .header-list-item {
@@ -139,7 +135,6 @@ body {
   position: absolute;
   left: 0;
   bottom: -1px;
-
 
   width: 100%;
   height: 4px;
@@ -166,7 +161,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
 }
 
@@ -207,12 +202,12 @@ body {
 /* =====HEAD=SECTION===== */
 
 .head {
-  background-color: #2e2f42;;
+  background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
-    ), 
+    ),
     url(/images/imgback1.jpg);
 
   background-repeat: no-repeat;
@@ -220,11 +215,9 @@ body {
   background-size: cover;
   max-width: 1440px;
   margin: 0 auto;
-
-  }
+}
 
 .head .container {
-
 }
 
 .head-title {
@@ -254,7 +247,7 @@ body {
   height: 56px;
   border: none;
   border-radius: 4px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15)
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .btn-order-service:hover,
@@ -295,12 +288,11 @@ body {
   border-radius: 4px;
   width: 264px;
   height: 112px;
-  background: #f4f4fd; 
+  background: #f4f4fd;
   margin-bottom: 8px;
-}
-
-.benefits-icon {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .benefits-subtitle {
@@ -332,7 +324,8 @@ body {
 .team-list-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -352,6 +345,33 @@ body {
 
 .team-text {
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-icon-list {
+  display: flex;
+  gap: 24px;
+  margin: 0 16px;
+}
+.team-icon-item {
+}
+
+.team-icon-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon {
+  fill: #f4f4fd;
+}
+
+.team-card:hover .team-icon-link {
+  background-color: #404bbf;
 }
 
 /* =====PORTFOLIO===== */
@@ -380,7 +400,8 @@ body {
 }
 
 .portfolio-list-item:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-img {
@@ -408,6 +429,14 @@ body {
   padding: 100px 0;
 }
 
+.footer-container {
+  display: flex;
+}
+
+.footer-logo-container {
+  margin-right: 120px;
+}
+
 .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -426,4 +455,40 @@ body {
 .footer-text {
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-social-container {
+  width: 208px;
+  height: 80px;
+  /* margin-top: 100px;
+  margin-bottom: 132px; */
+}
+
+.footer-text-media {
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-icon-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-icon-item {
+}
+.footer-icon-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-icon {
+  fill: #f4f4fd;
+}
+
+.footer-icon-link:hover {
+  background-color: #31d0aa;
 }
