--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,9 @@ body {
   position: relative;
 }
 
+.current {
+  color: #404bbf;
+}
 .header-list-link:hover,
 .header-list-link:focus {
   color: #404bbf;
@@ -248,6 +251,7 @@ body {
   border: none;
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-order-service:hover,
@@ -352,6 +356,8 @@ body {
   display: flex;
   gap: 24px;
   margin: 0 16px;
+  justify-content: center;
+
 }
 .team-icon-item {
 }
@@ -370,7 +376,8 @@ body {
   fill: #f4f4fd;
 }
 
-.team-card:hover .team-icon-link {
+.team-card:hover .team-icon-link,
+.team-card:focus .team-icon-link {
   background-color: #404bbf;
 }
 
@@ -471,6 +478,7 @@ body {
 }
 .footer-icon-list {
   display: flex;
+  align-items: baseline;
   gap: 16px;
 }
 .footer-icon-item {
@@ -489,6 +497,7 @@ body {
   fill: #f4f4fd;
 }
 
-.footer-icon-link:hover {
+.footer-icon-link:hover,
+.footer-icon-link:focus {
   background-color: #31d0aa;
 }
