--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,11 @@ body {
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+
 .team-icon {
   fill: #f4f4fd;
 }
@@ -438,6 +443,7 @@ body {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-logo-container {
@@ -478,7 +484,7 @@ body {
 }
 .footer-icon-list {
   display: flex;
-  align-items: baseline;
+
   gap: 16px;
 }
 .footer-icon-item {
